[package]
name = "toml-config"
version = "0.2.0"
authors = ["Bruno Filippone <bruno.filippone@b-fil.com>"]
description = "Loads and decodes TOML files into structures"
keywords = ["config", "toml", "decoder"]
repository = "https://github.com/bfil/toml-config"
documentation = "https://bfil.github.io/toml-config"
license = "MIT"
readme = "README.md"

[dependencies]
toml = { version = "0.1", default-features = false }
rustc-serialize = { optional = true, version = "0.3" }
serde = { optional = true, version = "0.6" }
serde_macros = { optional = true, version = "0.6" }

[features]
default = ["rustc-serialize", "toml/default"]
serde-serialization = ["serde", "serde_macros", "toml/serde"]

[dev-dependencies]
tempfile = "~1.1.1"
